# Atmospheric-Turbulence-Removal-with-Deep-Learning

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
docs/: noise2noise-cli.md  noise2noise.md
licenses/: DEPENDENCIES.md  MAIN_LICENSE
src/: temp.ipynb
src/GUI/: ALL.py  GUI.py  main.py  test.py
src/Modules/: ellipse.py  generate_movie.py  hsv.py  hsv_low_high.ipynb  noise2noise-old.py  noise2noise.py
src/Modules/noise2noise/: noise2mean.py  noise2noise-2-pair.py  noise2noise-old.py
src/gakkai/: __init__.py
tests/: conftest.py  test_ellipse.py  test_generate_movie.py  test_hsv.py  test_noise2noise.py
