[project]
name = "gakkai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shin902", email = "shinokabe7@outlook.jp" }
]
requires-python = ">=3.9"
dependencies = [
    "flet>=0.27.6",
    "ipywidgets>=8.1.5",
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[project.scripts]
gakkai = "gakkai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "pyinstaller>=6.12.0",
    "tqdm>=4.67.1",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]
